import { expect, userEvent, within } from 'storybook/test';
import { withResponsiveDataSize } from '.storybook/decorators/withResponsiveDataSize';
import preview from '.storybook/preview';
import { Footer } from './';

const meta = preview.meta({
  component: Footer,
  tags: ['alpha', 'udir'],
  parameters: {
    componentOrigin: {
      originator: 'self',
    },
    layout: 'fullscreen',
    customStyles: {
      padding: 0,
    },
  },
  decorators: [withResponsiveDataSize],
});

export const Preview = meta.story({
  render: () => (
    <Footer data-testid="footer">
      <Footer.List>
        <Footer.Item href="#" data-testid="footer-item-1">
          Om tjenesten
        </Footer.Item>
        <Footer.Item href="#">Kontakt oss</Footer.Item>
      </Footer.List>
      <Footer.List>
        <Footer.Item href="#">Lenke</Footer.Item>
        <Footer.Item href="#">Lenke</Footer.Item>
      </Footer.List>
      <Footer.List>
        <Footer.Item href="#">Personvernerklæring</Footer.Item>
        <Footer.Item href="#">Informasjonskapsler</Footer.Item>
        <Footer.Item href="#">Tilgjengelighetserklæring</Footer.Item>
      </Footer.List>
    </Footer>
  ),
  play: async ({ canvasElement, step }) => {
    const canvas = within(canvasElement);
    const footer = canvas.getByTestId('footer');

    await step('Footer is rendered', async () => {
      expect(footer).toBeInTheDocument();
    });

    await step('Footer content can be reached by keyboard', async () => {
      await userEvent.keyboard('{Tab}');
      expect(canvas.getByTestId('footer-item-1')).toHaveFocus();
    });
  },
});

export const Udirno = meta.story({
  render: () => (
    <Footer>
      <Footer.List>
        <Footer.Item href="#">Om tjenesten</Footer.Item>
        <Footer.Item href="#">Kontakt oss</Footer.Item>
      </Footer.List>
      <Footer.List>
        <Footer.Item href="#">Høringer</Footer.Item>
        <Footer.Item href="#">Presse</Footer.Item>
        <Footer.Item href="#">Nyhetsvarsel</Footer.Item>
      </Footer.List>
      <Footer.List>
        <Footer.Item href="#">Personvernerklæring</Footer.Item>
        <Footer.Item href="#">Informasjonskapsler</Footer.Item>
        <Footer.Item href="#">Tilgjengelighetserklæring</Footer.Item>
      </Footer.List>
      <Footer.List variant="social">
        <Footer.Item href="#">
          <LinkedIn aria-hidden />
          <span>LinkedIn</span>
        </Footer.Item>
        <Footer.Item href="#">
          <Facebook aria-hidden />
          <span>Facebook</span>
        </Footer.Item>
        <Footer.Item href="#">
          <Instagram />
          <span>Instagram</span>
        </Footer.Item>
      </Footer.List>
    </Footer>
  ),
});

export const Tjeneste = meta.story({
  render: () => (
    <Footer>
      <Footer.List>
        <Footer.Item href="#">Om tjenesten</Footer.Item>
        <Footer.Item href="#">Kontakt oss</Footer.Item>
      </Footer.List>
      <Footer.List>
        <Footer.Item href="#">Personvernerklæring</Footer.Item>
        <Footer.Item href="#">Informasjonskapsler</Footer.Item>
        <Footer.Item href="#">Tilgjengelighetserklæring</Footer.Item>
      </Footer.List>
    </Footer>
  ),
});

const Facebook = () => {
  return (
    <svg
      width="28"
      height="28"
      viewBox="0 0 28 28"
      fill="none"
      className="icon"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle cx="14" cy="14" r="11" stroke="currentColor" stroke-width="2" />
      <path
        d="M3.41626 19.6598C4.99728 22.6094 7.77554 24.8215 11.1013 25.6467V17.6672H8.62686V14H11.1013V12.4198C11.1013 8.33551 12.9497 6.44238 16.9597 6.44238C17.72 6.44238 19.0318 6.59166 19.5685 6.74046V10.0645C19.2853 10.0347 18.7933 10.0198 18.1822 10.0198C16.2147 10.0198 15.4544 10.7653 15.4544 12.703V14H19.3741L18.7006 17.6672H15.4544V25.9121C18.0489 25.5988 20.3884 24.4578 22.2009 22.7608C20.0554 24.7699 17.1716 26 14.0005 26C9.41978 26 5.43854 23.4333 3.41626 19.6598Z"
        fill="currentColor"
      />
    </svg>
  );
};

const Instagram = () => {
  return (
    <svg
      width="28"
      height="28"
      viewBox="0 0 28 28"
      fill="none"
      className="icon"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14.007 4.16094C17.2152 4.16094 17.5951 4.175 18.8568 4.23125C20.0293 4.28281 20.6625 4.47969 21.0846 4.64375C21.6428 4.85938 22.0461 5.12187 22.4636 5.53906C22.8857 5.96094 23.1436 6.35938 23.3594 6.91719C23.5236 7.33906 23.7205 7.97656 23.7721 9.14375C23.8284 10.4094 23.8425 10.7891 23.8425 13.9906C23.8425 17.1969 23.8284 17.5766 23.7721 18.8375C23.7205 20.0094 23.5236 20.6422 23.3594 21.0641C23.1436 21.6219 22.881 22.025 22.4636 22.4422C22.0414 22.8641 21.6428 23.1219 21.0846 23.3375C20.6625 23.5016 20.0246 23.6984 18.8568 23.75C17.5904 23.8062 17.2105 23.8203 14.007 23.8203C10.7989 23.8203 10.419 23.8062 9.15732 23.75C7.98476 23.6984 7.35157 23.5016 6.92945 23.3375C6.37131 23.1219 5.96795 22.8594 5.55052 22.4422C5.1284 22.0203 4.87043 21.6219 4.65468 21.0641C4.49052 20.6422 4.29353 20.0047 4.24194 18.8375C4.18566 17.5719 4.17159 17.1922 4.17159 13.9906C4.17159 10.7844 4.18566 10.4047 4.24194 9.14375C4.29353 7.97187 4.49052 7.33906 4.65468 6.91719C4.87043 6.35938 5.13309 5.95625 5.55052 5.53906C5.97264 5.11719 6.37131 4.85938 6.92945 4.64375C7.35157 4.47969 7.98945 4.28281 9.15732 4.23125C10.419 4.175 10.7989 4.16094 14.007 4.16094ZM14.007 2C10.7473 2 10.3393 2.01406 9.05882 2.07031C7.78308 2.12656 6.906 2.33281 6.14618 2.62812C5.35353 2.9375 4.68282 3.34531 4.01681 4.01562C3.3461 4.68125 2.93805 5.35156 2.62849 6.13906C2.33301 6.90313 2.12664 7.775 2.07035 9.05C2.01407 10.3344 2 10.7422 2 14C2 17.2578 2.01407 17.6656 2.07035 18.9453C2.12664 20.2203 2.33301 21.0969 2.62849 21.8562C2.93805 22.6484 3.3461 23.3187 4.01681 23.9844C4.68282 24.65 5.35353 25.0625 6.14149 25.3672C6.906 25.6625 7.77839 25.8687 9.05413 25.925C10.3346 25.9812 10.7426 25.9953 14.0023 25.9953C17.2621 25.9953 17.6701 25.9812 18.9506 25.925C20.2263 25.8687 21.1034 25.6625 21.8632 25.3672C22.6512 25.0625 23.3219 24.65 23.9879 23.9844C24.6539 23.3187 25.0666 22.6484 25.3715 21.8609C25.667 21.0969 25.8734 20.225 25.9296 18.95C25.9859 17.6703 26 17.2625 26 14.0047C26 10.7469 25.9859 10.3391 25.9296 9.05937C25.8734 7.78437 25.667 6.90781 25.3715 6.14844C25.076 5.35156 24.668 4.68125 23.9973 4.01562C23.3313 3.35 22.6605 2.9375 21.8726 2.63281C21.1081 2.3375 20.2357 2.13125 18.9599 2.075C17.6748 2.01406 17.2668 2 14.007 2Z"
        fill="currentColor"
      />
      <path
        d="M14.007 7.83594C10.6019 7.83594 7.83936 10.5969 7.83936 14C7.83936 17.4031 10.6019 20.1641 14.007 20.1641C17.4122 20.1641 20.1747 17.4031 20.1747 14C20.1747 10.5969 17.4122 7.83594 14.007 7.83594ZM14.007 17.9984C11.7979 17.9984 10.0062 16.2078 10.0062 14C10.0062 11.7922 11.7979 10.0016 14.007 10.0016C16.2161 10.0016 18.0078 11.7922 18.0078 14C18.0078 16.2078 16.2161 17.9984 14.007 17.9984Z"
        fill="currentColor"
      />
      <path
        d="M21.8586 7.59214C21.8586 8.38902 21.2113 9.0312 20.4187 9.0312C19.6213 9.0312 18.9788 8.38433 18.9788 7.59214C18.9788 6.79526 19.626 6.15308 20.4187 6.15308C21.2113 6.15308 21.8586 6.79995 21.8586 7.59214Z"
        fill="currentColor"
      />
    </svg>
  );
};

const LinkedIn = () => {
  return (
    <svg
      width="28"
      height="28"
      viewBox="0 0 28 28"
      fill="none"
      className="icon"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        fill-rule="evenodd"
        clip-rule="evenodd"
        d="M6.29248 8.57617C6.29248 9.52539 7.06201 10.2949 8.01514 10.2949C8.96436 10.2949 9.73389 9.52148 9.73389 8.57617C9.73389 7.62695 8.96436 6.85742 8.01514 6.85742C7.06201 6.85742 6.29248 7.62695 6.29248 8.57617Z"
        fill="currentColor"
      />
      <path
        fill-rule="evenodd"
        clip-rule="evenodd"
        d="M6.53076 21.1426H9.49951V11.5957H6.53076V21.1426Z"
        fill="currentColor"
      />
      <path
        fill-rule="evenodd"
        clip-rule="evenodd"
        d="M17.644 21.1426H20.6089V15.9043C20.6089 13.334 20.0542 11.3574 17.0503 11.3574C15.6089 11.3574 14.6401 12.1504 14.2456 12.9004H14.2065V11.5957H11.3628V21.1426H14.3237V16.4238C14.3237 15.1777 14.5581 13.9707 16.1011 13.9707C17.6245 13.9707 17.644 15.3965 17.644 16.502V21.1426Z"
        fill="currentColor"
      />
      <path
        fill-rule="evenodd"
        clip-rule="evenodd"
        d="M6.29248 8.57617C6.29248 9.52539 7.06201 10.2949 8.01514 10.2949C8.96436 10.2949 9.73389 9.52148 9.73389 8.57617C9.73389 7.62695 8.96436 6.85742 8.01514 6.85742C7.06201 6.85742 6.29248 7.62695 6.29248 8.57617Z"
        fill="currentColor"
      />
      <path
        fill-rule="evenodd"
        clip-rule="evenodd"
        d="M6.53076 21.1426H9.49951V11.5957H6.53076V21.1426Z"
        fill="currentColor"
      />
      <path
        fill-rule="evenodd"
        clip-rule="evenodd"
        d="M17.644 21.1426H20.6089V15.9043C20.6089 13.334 20.0542 11.3574 17.0503 11.3574C15.6089 11.3574 14.6401 12.1504 14.2456 12.9004H14.2065V11.5957H11.3628V21.1426H14.3237V16.4238C14.3237 15.1777 14.5581 13.9707 16.1011 13.9707C17.6245 13.9707 17.644 15.3965 17.644 16.502V21.1426Z"
        fill="currentColor"
      />
      <path
        d="M23 2C24.6569 2 26 3.34315 26 5V23C26 24.6569 24.6569 26 23 26H5C3.34315 26 2 24.6569 2 23V5C2 3.34315 3.34315 2 5 2H23ZM5 4C4.44772 4 4 4.44772 4 5V23C4 23.5523 4.44772 24 5 24H23C23.5523 24 24 23.5523 24 23V5C24 4.44772 23.5523 4 23 4H5Z"
        fill="currentColor"
      />
    </svg>
  );
};
